# svault

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: cli.rs  clip.rs  crypto.rs  main.rs  passgen.rs  totp.rs  vault.rs
