[package]
name = "svault"
version = "0.1.0"
edition = "2021"
description = "Learning-grade zero-knowledge, dual-secret password vault (2SKD-style)"

[dependencies]
# --- crypto primitives (audited; we COMPOSE these, never reimplement them) ---
argon2 = "0.5"                 # Argon2id memory-hard key stretching
aes-gcm = "0.10"               # AES-256-GCM authenticated encryption (AEAD)
hkdf = "0.12"                  # HKDF for key separation/expansion
sha2 = "0.10"                  # SHA-256 for HKDF
hmac = "0.12"                  # HMAC for TOTP (RFC 6238)
sha1 = "0.10"                  # SHA-1 for TOTP (the RFC 6238 default)
rand = "0.8"                   # OsRng -> cryptographically secure randomness
zeroize = { version = "1", features = ["derive"] }  # wipe secrets from RAM

# --- new feature deps ---
unicode-normalization = "0.1"  # NFKD password normalization (Unicode-correct unlock)
data-encoding = "2"            # base32 decode for TOTP seeds
arboard = "3"                  # cross-platform clipboard (auto-clear)
libc = "0.2"                   # mlockall: keep secrets out of swap (best-effort)

# --- plumbing ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"                # encode binary blobs inside JSON
clap = { version = "4", features = ["derive"] }
rpassword = "7"                # read passwords without echoing to terminal
anyhow = "1"                   # ergonomic error handling

[profile.release]
opt-level = 3
